syntax = "proto3";
import "google/protobuf/timestamp.proto";
package pre_persistence;
option go_package = "/persistence/pre_persistence/";

message BlockHeader {
  int64 height = 1;
  string hash = 2;
  string network_id = 3;
  google.protobuf.Timestamp time = 4;
  uint32 num_txs = 5;
  int64 total_txs = 6;
  string last_block_hash = 7;
  bytes proposer_address = 8;
}

message Block {
  BlockHeader block_header = 1;
  repeated bytes transactions = 2;
}