syntax = "proto3";

package configs;

import "keybase.proto";

option go_package = "github.com/pokt-network/pocket/runtime/configs";

message KeybaseConfig {

  keybase.KeybaseType keybase_type = 1;

  // For KeybaseType.FILE
  string keybase_path = 2;

  // For KeybaseType.VAULT
  string vault_addr = 3;
  string vault_token = 4;
  string vault_mount_path = 5;
}
