
syntax = "proto3";

package configs;

option go_package = "github.com/pokt-network/pocket/runtime/configs";

// ValidatorConfig defines the configuration for the node acting as a validator. A Validator is a protocol actor whose responsibility is to securely validate and process state transitions through transactions.
message ValidatorConfig {
  // Enabled defines whether or not the node is a validator.
  bool enabled = 1;
}
